# command

./: Cargo.toml  README.md
.github/workflows/: ci-cd.yml
crates/command/: Cargo.toml
crates/command/src/: event_kind.rs  lib.rs  prelude.rs  server_prelude.rs  traits.rs
crates/command/src/macros/: mod.rs  server_macro.rs  web_macro.rs
crates/command/src/services/: cli_progress.rs  command_events.rs  command_mediator.rs  command_progress.rs  command_registry.rs  command_runner.rs  command_status.rs  mod.rs  worker.rs  worker_pool.rs
crates/command/src/tests/: delay_handler.rs  expand_macros.rs  expand_macros_tests.rs  logging.rs  mod.rs  test_macro.rs
crates/command/src/tests/snapshots/: studiole_command__tests__expand_macros_tests__macro_expansion.snap
